--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -6,4 +6,10 @@
     android:layout_height="match_parent"
     tools:context="com.example.android.tetris.GameActivity">
 
+    <GridLayout
+        android:id="@+id/gameboard"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        ></GridLayout>
+
 </android.support.constraint.ConstraintLayout>
