--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -5,11 +5,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.android.tetris.GameActivity">
-
+    
     <GridLayout
         android:id="@+id/gameboard"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        ></GridLayout>
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+    ></GridLayout>
 
 </android.support.constraint.ConstraintLayout>
